[P4PU-1081] getPublicReceiptDetail
